--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="pages.css">
     <link rel="shortcut icon" href="images/logo-round-t.ico" type="image/x-icon">
-    <title>Money Maa</title>
+    <title>Money maa Financial Planning and Investment Services</title>
 </head>
 <body>
     <div class="preloader"></div> 
@@ -129,7 +129,7 @@
     <div class="mobile-header green-bg">
         <div class="container header-container mobile-menu-container">
             <div class="mobile-logo"> <a class="navbar-brand fw-bold" href="index.html"><img src="images/logo-round-t.png" alt=""></a>
-                <span class="text-white">Money Maa</span></div>
+                <span class="text-white">Money maa Financial Planning and Investment Services</span></div>
             <div class="mobile-menu">
                 <button class="hamburger">&#9776;</button>
                 <button class="cross">&#735;</button>
@@ -320,7 +320,7 @@
                                     <div class="founder-title">
                                         <h5>Gayatree Lohiya, <span>Founder</span></h5>
                                     </div>
-                                    <p>Together, let us embark on a journey towards a financially secure future. At Money Maa, we strive to be your trusted partner in achieving your financial goals. We are here to educate, guide, and support you every step of the way.</p>
+                                    <p>Together, let us embark on a journey towards a financially secure future. At Money maa Financial Planning and Investment Services, we strive to be your trusted partner in achieving your financial goals. We are here to educate, guide, and support you every step of the way.</p>
                                 </div>
                             </div>
                             <div class="about-left-img wow fadeInUp reveal" data-wow-delay="400ms" style="animation-delay: 400ms;">
@@ -334,7 +334,7 @@
                             <div class="about-right-img">
                                 <img src="images/about-4.jpg" alt="">
                             </div>
-                            <p>Discover financial confidence with Money Maa Financial Consulting. Our firm is committed to providing tailored financial solutions, leveraging expertise to empower clients on their unique paths to prosperity. Let us be your trusted partner in achieving financial goals and securing a brighter financial future.</p>
+                            <p>Discover financial confidence with Money maa Financial Planning and Investment Services. Our firm is committed to providing tailored financial solutions, leveraging expertise to empower clients on their unique paths to prosperity. Let us be your trusted partner in achieving financial goals and securing a brighter financial future.</p>
                             <div class="about-feature-list">
                                 <div class="row">
                                     <div class="col-md-6 col-12">
@@ -387,7 +387,7 @@
                         <div class="logo">
                             <a class="navbar-brand" href="index.html"><img src="images/logo-transparent.png" alt=""></a>
                         </div>
-                        <p class="company-desc">We understand that your financial journey is unique, and at Money Maa, we are dedicated to providing tailored solutions to help you achieve your goals.</p>
+                        <p class="company-desc">We understand that your financial journey is unique, and at Money maa Financial Planning and Investment Services, we are dedicated to providing tailored solutions to help you achieve your goals.</p>
                         <div class="support-info">
                             <div class="support-icon">
                                 <i class="fa-solid fa-phone-volume"></i>
