--- a/dmat.html
+++ b/dmat.html
@@ -257,7 +257,7 @@
                         <div class="logo">
                             <a class="navbar-brand" href="index.html"><img src="images/logo-transparent.png" alt=""></a>
                         </div>
-                        <p class="company-desc">We understand that your financial journey is unique, and at Money Maa, we are dedicated to providing tailored solutions to help you achieve your goals.</p>
+                        <p class="company-desc">We understand that your financial journey is unique, and at Money maa Financial Planning and Investment Services, we are dedicated to providing tailored solutions to help you achieve your goals.</p>
                         <div class="support-info">
                             <div class="support-icon">
                                 <i class="fa-solid fa-phone-volume"></i>
