--- a/health-insurance.html
+++ b/health-insurance.html
@@ -214,8 +214,8 @@
         <div class="container">
              <div class="col-xl-12">
                  <div class="service-page-content">
-                     <p>In the pursuit of a fulfilling life, one's well-being stands as a cornerstone, and at Money Maa, we recognize the significance of safeguarding your health. Our health insurance solutions go beyond mere coverage – they represent a commitment to ensuring that you and your loved ones have access to quality healthcare without the burden of exorbitant expenses. With rising medical costs and unexpected health challenges, having a robust health insurance plan becomes an essential pillar of your overall financial strategy. <br> <br>
-                        At Money Maa, we offer a range of health insurance options designed to address diverse needs and circumstances. Our plans not only cover hospitalization and medical expenses but also extend to preventive care, wellness initiatives, and, in some cases, critical illness coverage. We understand that every individual is unique, and our health insurance solutions reflect this by providing flexibility and customization. Whether you are a young professional, a growing family, or a retiree, our health insurance plans are tailored to offer the right level of protection for your current lifestyle and future aspirations.</p>
+                     <p>In the pursuit of a fulfilling life, one's well-being stands as a cornerstone, and at Money maa Financial Planning and Investment Services, we recognize the significance of safeguarding your health. Our health insurance solutions go beyond mere coverage – they represent a commitment to ensuring that you and your loved ones have access to quality healthcare without the burden of exorbitant expenses. With rising medical costs and unexpected health challenges, having a robust health insurance plan becomes an essential pillar of your overall financial strategy. <br> <br>
+                        At Money maa Financial Planning and Investment Services, we offer a range of health insurance options designed to address diverse needs and circumstances. Our plans not only cover hospitalization and medical expenses but also extend to preventive care, wellness initiatives, and, in some cases, critical illness coverage. We understand that every individual is unique, and our health insurance solutions reflect this by providing flexibility and customization. Whether you are a young professional, a growing family, or a retiree, our health insurance plans are tailored to offer the right level of protection for your current lifestyle and future aspirations.</p>
                      <h2>Benefits of Health Insurance</h2>
                      <div class="about-feature-list service-list">
                         <div class="row">
@@ -277,7 +277,7 @@
                       <div class="logo">
                           <a class="navbar-brand" href="index.html"><img src="images/logo-transparent.png" alt=""></a>
                       </div>
-                      <p class="company-desc">We understand that your financial journey is unique, and at Money Maa, we are dedicated to providing tailored solutions to help you achieve your goals.</p>
+                      <p class="company-desc">We understand that your financial journey is unique, and at Money maa Financial Planning and Investment Services, we are dedicated to providing tailored solutions to help you achieve your goals.</p>
                       <div class="support-info">
                           <div class="support-icon">
                               <i class="fa-solid fa-phone-volume"></i>
