--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <div class="header-inner-box">     
 
                         <div class="logo">
-                            <a class="navbar-brand fw-bold" href="index.html"><img src="images/logo-transparent.png" alt=""></a>                            
+                            <a class="navbar-brand fw-bold" href="index.html"><img src="images/logo-transparent.png" alt=""></a>    
                         </div>
 
                         <div class="main-menu">
@@ -301,7 +301,7 @@
                         </div>
                         <div class="single-service-inner">
                             <h5><a href="health-insurance.html">Health Insurance</a></h5>
-                            <p>In the pursuit of a fulfilling life, one's well-being stands as a cornerstone, and at Money Maa, we recognize the significance of safeguarding your health.</p>
+                            <p>In the pursuit of a fulfilling life, one's well-being stands as a cornerstone, and at Money maa Financial Planning and Investment Services, we recognize the significance of safeguarding your health.</p>
                             <a href="health-insurance.html" class="details-link"><i class="fa-solid fa-arrow-right"></i></a>
                         </div>
                         <div class="single-service-inner">
@@ -324,7 +324,7 @@
                             <h2>Doing the right thing, <br>
                                 at the right time.</h2>
                         </div>
-                        <p>Experience the difference with Money Maa — your partner in financial success. Our services encompass robust financial planning, asset management, and continuous support. Count on our professional team to navigate complexities and tailor solutions to meet your evolving needs.</p>
+                        <p>Experience the difference with Money maa Financial Planning and Investment Services — your partner in financial success. Our services encompass robust financial planning, asset management, and continuous support. Count on our professional team to navigate complexities and tailor solutions to meet your evolving needs.</p>
                         <div class="service-bg">
                             <img src="images/service-bg.png" alt="">
                             <a href="mutual-funds.html" class="more-service-btn">Explore More Services</a>
@@ -343,7 +343,7 @@
             <div class="container header-container">
                 <div class="offset-xl-1 col-xl-7 offset-lg-1 col-lg-7 offset-md-1 col-md-7">
                     <div class="section-title">
-                        <h6>ABOUT OUR MONEY MAA</h6>
+                        <h6>ABOUT OUR MONEY MAA FINANCIAL PLANNING & INVESTMENT SERVICES</h6>
                         <h2 class="text-white">Solve All Your Financial Problems 
                             Under One Room</h2>
                     </div>
@@ -429,7 +429,7 @@
                                     <div class="testimonal-slider-content">
                                         <h6>Sapna Tapadiya</h6>
                                         <p class="designation">Software Engineer</p>
-                                        <p>I have been availing service of complete financial planning with Money Maa Financial Services for quite sometime. They helped me in financial planning with health insurance and life insurance. Their deep financial knowledge helped me to build my financial goals . They are also helping in my retirement planning. Wishing them all the best in their endeavour.</p>
+                                        <p>I have been availing service of complete financial planning with Money Maa Financial Planning & Investment Services for quite sometime. They helped me in financial planning with health insurance and life insurance. Their deep financial knowledge helped me to build my financial goals . They are also helping in my retirement planning. Wishing them all the best in their endeavour.</p>
                                         <div class="testimonal-review-wrap">
                                             <i class="fa-solid fa-star" style="color: #ffb966;"></i>
                                             <i class="fa-solid fa-star" style="color: #ffb966;"></i>
@@ -449,7 +449,7 @@
                                     <div class="testimonal-slider-content">
                                         <h6>Somyajyoti Ghosh</h6>
                                         <p class="designation">Mechanical Engineer</p>
-                                        <p>I have been availing of investment consultancy services from Money Maa Financial Planner for the last few years. Our experience with them has been fabulous. Their expertise in knowledge of the market has always been a boon for us as our investments have b helped us in financial planning. The personal involvement by explaning all the aspect of technical financial purpose by Mrs Lohiya have been providing is amazing.</p>
+                                        <p>I have been availing of investment consultancy services from Money Maa Financial Planning & Investment Services for the last few years. Our experience with them has been fabulous. Their expertise in knowledge of the market has always been a boon for us as our investments have b helped us in financial planning. The personal involvement by explaning all the aspect of technical financial purpose by Mrs Lohiya have been providing is amazing.</p>
                                         <div class="testimonal-review-wrap">
                                             <i class="fa-solid fa-star" style="color: #ffb966;"></i>
                                             <i class="fa-solid fa-star" style="color: #ffb966;"></i>
@@ -469,7 +469,7 @@
                                     <div class="testimonal-slider-content">
                                         <h6>Shraddha Karwa</h6>
                                         <p class="designation">Store manager at A.B. Group</p>
-                                        <p>I am incredibly impressed by Money Maa financial planner and investment services. Their innovative approach and personalized strategies have transformed my financial outlook. Their dedication to client success and cutting-edge solutions make them a standout choice for anyone navigating the complexities of investment planning.</p>
+                                        <p>I am incredibly impressed by Money Maa financial planning and investment services. Their innovative approach and personalized strategies have transformed my financial outlook. Their dedication to client success and cutting-edge solutions make them a standout choice for anyone navigating the complexities of investment planning.</p>
                                         <div class="testimonal-review-wrap">
                                             <i class="fa-solid fa-star" style="color: #ffb966;"></i>
                                             <i class="fa-solid fa-star" style="color: #ffb966;"></i>
@@ -568,7 +568,7 @@
                         <div class="logo">
                             <a class="navbar-brand" href="index.html"><img src="images/logo-transparent.png" alt=""></a>
                         </div>
-                        <p class="company-desc">We understand that your financial journey is unique, and at Money Maa, we are dedicated to providing tailored solutions to help you achieve your goals.</p>
+                        <p class="company-desc">We understand that your financial journey is unique, and at Money maa Financial Planning and Investment Services, we are dedicated to providing tailored solutions to help you achieve your goals.</p>
                         <div class="support-info">
                             <div class="support-icon">
                                 <i class="fa-solid fa-phone-volume"></i>
