--- a/pms-aif.html
+++ b/pms-aif.html
@@ -207,7 +207,7 @@
                     <h2>Portfolio Management Services (PMS)</h2>
                      <p>Portfolio Management Services (PMS) is a tailored and professionally overseen investment avenue that employs diverse strategies to capitalize on market-linked opportunities. Tailored to suit the preferences and risk appetite of high-net-worth individuals (HNIs), PMS offers a direct investment approach into a diversified range of securities, including equities, fixed income, and structured products. This personalized service is designed to provide HNIs with exposure to the market while allowing for customization based on their financial goals and risk tolerance.<br> <br>
                         
-                        Money Maa has established strategic collaborations with a wide array of prestigious third-party PMS providers spanning across India. These providers, comprising asset management companies (AMCs) and esteemed financial institutions, present specialized PMS solutions. Through these partnerships, Money Maa endeavors to present clients with a diverse array of PMS options, empowering them to select strategies that harmonize with their investment goals and preferences. In summary, Portfolio Management Services offered by Money Maa serve as a conduit for high-net-worth individuals to access meticulously crafted investment portfolios, customized to their distinct financial situations, risk appetites, and market exposure inclinations.</p>
+                        Money maa Financial Planning and Investment Services has established strategic collaborations with a wide array of prestigious third-party PMS providers spanning across India. These providers, comprising asset management companies (AMCs) and esteemed financial institutions, present specialized PMS solutions. Through these partnerships, Money maa Financial Planning and Investment Services endeavors to present clients with a diverse array of PMS options, empowering them to select strategies that harmonize with their investment goals and preferences. In summary, Portfolio Management Services offered by Money maa Financial Planning and Investment Services serve as a conduit for high-net-worth individuals to access meticulously crafted investment portfolios, customized to their distinct financial situations, risk appetites, and market exposure inclinations.</p>
                  </div>
              </div>
         </div> 
@@ -240,7 +240,7 @@
                         <div class="logo">
                             <a class="navbar-brand" href="index.html"><img src="images/logo-transparent.png" alt=""></a>
                         </div>
-                        <p class="company-desc">We understand that your financial journey is unique, and at Money Maa, we are dedicated to providing tailored solutions to help you achieve your goals.</p>
+                        <p class="company-desc">We understand that your financial journey is unique, and at Money maa Financial Planning and Investment Services, we are dedicated to providing tailored solutions to help you achieve your goals.</p>
                         <div class="support-info">
                             <div class="support-icon">
                                 <i class="fa-solid fa-phone-volume"></i>
